--- a/assets/_root.css
+++ b/assets/_root.css
@@ -2,9 +2,15 @@
   /* colors */
   --color1: hsl(20, 100%, 50%);
 
+  --color1-10: hsl(20, 100%, 90%);
+
   --color2: hsl(140, 100%, 50%);
 
+  --color2-10: hsl(140, 100%, 90%);
+
   --color3: hsl(260, 100%, 50%);
+
+  --color3-10: hsl(260, 100%, 90%);
 
   --black: hsl(255, 0%, 0%);
 
