--- a/assets/styles.css
+++ b/assets/styles.css
@@ -64,7 +64,7 @@ li {
   display: inline-flex;
 }
 
-.button {
+.menu {
   color: var(--white);
 	font-size: var(--text2);
   font-family: var(--font1);
@@ -148,4 +148,11 @@ input[type="submit"] {
   background:var(--white);
   order: 1px var(--color1) solid;
   margin-top: 15px;
+}
+
+.user {
+  position: fixed;
+  font-family: var(--font1);
+	top: 10px;
+	left: 10px;
 }
